--- a/component/forgotPassword/forgot.module.scss
+++ b/component/forgotPassword/forgot.module.scss
@@ -73,7 +73,7 @@
 
     // padding-right: 30px;
     .form {
-      max-width: 800px !important;
+      max-width: 600px !important;
       margin: 0 auto;
       // display: flex;
       // flex-direction: column;
@@ -142,6 +142,7 @@
       margin-top: 24px;
       height: 50px;
       max-width: 800px;
+      border: none;
       // max-width: 600px;
       // margin-top: 300px;
     }
