--- a/component/login/login.module.scss
+++ b/component/login/login.module.scss
@@ -83,7 +83,7 @@
     // max-width: 800px;
     // height: 100vh;
     .form {
-      max-width: 800px !important;
+      max-width: 600px !important;
       margin: 0 auto;
       // display: flex;
       // flex-direction: column;
@@ -93,6 +93,30 @@
       position: relative;
       top: 50%;
       transform: translateY(-50%);
+      .sepratorPosition {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+        .seprator {
+          // border: 1px solid #949494;
+          padding: 0 10px 0 10px;
+          width: 50px;
+          height: 50px;
+        }
+        .bottomText {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          color: #949494;
+          // max-width: 800px;
+          // p {
+          //   margin-top: 40px;
+          //   margin-bottom: 58px;
+          // }
+        }
+      }
     }
 
     // display: flex;
@@ -130,14 +154,16 @@
     .checkbox {
       // font-size: 12px;
       max-width: 800px;
+      input {
+        border: 1px solid rgba(255, 57, 81, 1) !important;
+      }
+      input:checked {
+        background-color: #f9445b;
+      }
       label {
         // max-width: 800px;
         display: flex;
         justify-content: space-between;
-      }
-
-      input {
-        border: 1px solid rgba(255, 57, 81, 1) !important;
       }
     }
     .textGreen {
@@ -151,11 +177,12 @@
 
     .input {
       background: #f8f8f8;
-
+      // border: none;
       max-width: 800px;
       // width: 100%;
       height: 50px;
     }
+
     .label {
       font-size: 16px !important;
       font-weight: bold;
@@ -170,6 +197,7 @@
       margin-top: 24px;
       height: 50px;
       max-width: 800px;
+      border: none;
     }
     .signup {
       // font-family: "Poppins" ;
@@ -179,25 +207,13 @@
       margin: 30px 0;
     }
 
-    .bottomText {
-      display: flex;
-      justify-content: center;
-      margin-top: 40px;
-      color: #949494;
-      max-width: 800px;
-      // p {
-      //   margin-top: 40px;
-      //   margin-bottom: 58px;
-      // }
-    }
-
     .bottom {
       //  display: inline-block;
       // width: 50%;
       display: flex;
       max-width: 800px;
       // height: 56px;
-      justify-content: space-between;
+      justify-content: space-around;
       margin-bottom: 30px;
 
       // padding-right: 30px;
@@ -227,6 +243,11 @@
   }
   @media screen and (max-width: 1035px) {
     // .formSide {
+    .seprator {
+      // border: 1px solid #949494;
+
+      height: 40px !important;
+    }
     .checkbox {
       font-size: 13px;
     }
@@ -266,6 +287,11 @@
       // width: 50% !important;
       // margin-left: 15px;
       padding: 70px 30px 70px 30px;
+      .seprator {
+        // border: 1px solid #949494;
+
+        height: 40px !important;
+      }
 
       .password {
         .eyeButton {
