--- a/component/resetPassword/reset.module.scss
+++ b/component/resetPassword/reset.module.scss
@@ -86,7 +86,7 @@
 
     // }
     .form {
-      max-width: 800px !important;
+      max-width: 600px !important;
       margin: 0 auto;
       // display: flex;
       // flex-direction: column;
@@ -167,6 +167,7 @@
       margin-top: 24px;
       height: 50px;
       max-width: 800px;
+      border: none;
       // margin-bottom: 300px;
       // max-width: 700px;
     }
