--- a/component/signup/signup.module.scss
+++ b/component/signup/signup.module.scss
@@ -64,7 +64,7 @@
 
     // padding-right: 30px;
     .form {
-      max-width: 800px !important;
+      max-width: 600px !important;
       margin: 0 auto;
       // display: flex;
       // flex-direction: column;
@@ -75,6 +75,30 @@
       position: relative;
       top: 50%;
       transform: translateY(-50%);
+      .sepratorPosition {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+        .seprator {
+          // border: 1px solid #949494;
+          padding: 0 10px 0 10px;
+          width: 50px;
+          height: 50px;
+        }
+        .bottomText {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          color: #949494;
+          // max-width: 800px;
+          // p {
+          //   margin-top: 40px;
+          //   margin-bottom: 58px;
+          // }
+        }
+      }
     }
     .password {
       max-width: 800px;
@@ -99,6 +123,9 @@
       input {
         border: 1px solid rgba(255, 57, 81, 1) !important;
       }
+      input:checked {
+        background-color: #f9445b;
+      }
     }
     .textGreen {
       color: #6fd6a4 !important;
@@ -115,6 +142,14 @@
       // width: 100%;
       height: 50px;
     }
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+    input[type="number"] {
+      -moz-appearance: textfield;
+    }
     .label {
       font-size: 16px !important;
       font-weight: bold;
@@ -129,6 +164,7 @@
       // margin-top: 24px;
       height: 50px;
       max-width: 800px;
+      border: none;
       // max-width: 700px;
     }
     .signup {
@@ -139,25 +175,13 @@
       margin: 10px 0;
     }
 
-    .bottomText {
-      display: flex;
-      justify-content: center;
-      margin-top: 40px;
-      color: #949494;
-      max-width: 800px;
-      // p {
-      // margin-top: 40px;
-      // margin-bottom: 58px;
-      // }
-    }
-
     .bottom {
       //  display: inline-block;
       // width: 50%;
       display: flex;
       max-width: 800px;
       // height: 56px;
-      justify-content: space-between;
+      justify-content: space-around;
       margin-bottom: 30px;
       // padding-right: 30px;
 
@@ -184,6 +208,11 @@
     }
   }
   @media screen and (max-width: 1035px) {
+    .seprator {
+      // border: 1px solid #949494;
+      // width: 50px;
+      height: 40px !important;
+    }
     .checkbox {
       font-size: 13px;
     }
@@ -217,6 +246,11 @@
       // width: 50% !important;
       // margin-left: 15px;
       padding: 70px 30px 70px 30px;
+      .seprator {
+        // border: 1px solid #949494;
+        // width: 50px;
+        height: 40px !important;
+      }
 
       .password {
         .eyeButton {
